  * Added audio padding handling. (New buffer flag for this.)
  * Fix seeking in large raw DV files.
  * Ported to new libmpcdec API (retaining build compat. with the old API).
  * Cope with CDDB return code 211 (multiple entries).
  * Allow reading of non-block-sized chunks from audio CDs.
  * Add a user agent & protocol hack ("qthttp://...") to allow direct
    viewing of Apple film trailers.

xine-lib (1.1.16.3) 2009-04-03
  * Security fixes:
    - Fix another possible int overflow in the 4XM demuxer.
      (ref. TKADV2009-004, CVE-2009-0698)
    - Fix an integer overflow in the Quicktime demuxer.
      (TKADV2009-005, CVE-2009-1274)
  * Enable libmpeg2new (if configured with --enable-libmpeg2new).
    This is not yet production code; the old mpeg2 decoder remains the default.
  * Add support for OpenBSD.
  * Fix a build failure on *BSD due to some rather useful GNUisms.
  * Protect audio loop so it cannot write to a paused device (fix
    pause/resume freeze with pulseaudio).
  * Fix build with libavutil >= 50.0.0.
  * Fix segfaults when playing VCDs.
  * Fix calculation of frame duration for ffmpeg-decoded formats.
  * Don't assume that ID3v2 tags with no content mean "end of ID3 data".

xine-lib (1.1.16.2) 2009-02-10
  * Build fixes related to ImageMagick 6.4 & later.
  * Fix an error in Matroska PTS calculation.
  * Some front ends hang due to the hang fixes in 1.1.16. Fix this by
    removing a break statement.
  * Fix broken size checks in various input plugins (ref. CVE-2008-5239).
  * More malloc checking (ref. CVE-2008-5240).
  * Fix race conditions in gapless_switch (ref. kde bug #180339)
  * Fix a possible integer overflow in the 4XM demuxer.
    (TKADV2009-004, CVE-2009-0698)

xine-lib (1.1.16.1) 2009-01-11
  * Fix build with older ffmpeg, both internal and in Debian 5.0.
  * Add version check for CACA library and disable CACA plugin if needed
  * Fix playback of some H.264 files (broken in 1.1.16).
  * Various other build & bug fixes.