@@ -259,7 +259,7 @@ static int id3v22_parse_frame_header(input_plugin_t *input,
   if (len == ID3V22_FRAME_HEADER_SIZE) {
     frame_header->id   = (buf[0] << 16) + (buf[1] << 8) + buf[2];
 
-    frame_header->size = _X_BE_24_synchsafe(&buf[3]);
+    frame_header->size = _X_BE_24(&buf[3]);
 
     lprintf("frame: %c%c%c: size: %zu\n", buf[0], buf[1], buf[2],
             frame_header->size);
@@ -426,7 +426,7 @@ static int id3v23_parse_frame_ext_header(input_plugin_t *input,
 
   if (input->read (input, buf, 4) == 4) {
   
-    frame_ext_header->size  = _X_BE_32_synchsafe(&buf[0]);
+    frame_ext_header->size  = _X_BE_32(&buf[0]);
     
     if (frame_ext_header->size == 6) {
       if (input->read (input, buf + 4, 6) == 6) {
@@ -615,7 +615,7 @@ static int id3v24_parse_frame_header(input_plugin_t *input,
   len  = input->read (input, buf, ID3V24_FRAME_HEADER_SIZE);
   if (len == ID3V24_FRAME_HEADER_SIZE) {
     frame_header->id    = _X_BE_32(buf);
-    frame_header->size  = _X_BE_32_synchsafe(&buf[4]);
+    frame_header->size  = _X_BE_32(&buf[4]);
     frame_header->flags = _X_BE_16(&buf[8]);
 
     lprintf("frame: %c%c%c%c, size: %zu, flags: %X\n", buf[0], buf[1], buf[2], buf[3],
@@ -633,7 +633,7 @@ static int id3v24_parse_ext_header(input_plugin_t *input,
 
   if (input->read (input, buf, 4) == 4) {
  
-    frame_ext_header->size  = _X_BE_32_synchsafe(&buf[0]);
+    frame_ext_header->size  = _X_BE_32(&buf[0]);
 
     if (input->read (input, buf, 2) == 2) {
       uint8_t flags_size = buf[0];
