@@ -252,7 +252,7 @@ static int rtsp_get_answers(rtsp_t *s) {
         }
       } else
       {
-        lprintf("setting session id to: %s\n", buf);
+        lprintf("setting session id to: %s\n", tmp);
 
         s->session=strdup(tmp);
       }
